--- a/AboutUs.html
+++ b/AboutUs.html
@@ -88,6 +88,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
             </div>
             <div class="profilecentrecard">
+                <h3>Our <span>Vision</span></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+            </div>
+            <div class="profilecentrecard">
+                <h3>Our <span>Mission</span></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+            </div>
+            <div class="profilecentrecard">
                 <h3>Value in <span>TeavoU</span></h3>
                 
                 <ol>
