--- a/AboutUs.html
+++ b/AboutUs.html
@@ -30,10 +30,14 @@
     <section class="profileupper" id="profileupper">
         <div class="upperleftcolumn">
             <div class="profileupper-text">
-            <h1>About Us<span><br>TeavoU</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>
+                <h1>About Us<span><br>TeavoU</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>
+            </div>
+            <div class="profileupper-bubukteh">
+                <img src="Asset/bubuk teh.png" alt="">
             </div>
         </div>
+
         <div class="upperrightcolumn">
             <div class="uppercolumn">
                 <div class="uppercolumn-1">
@@ -42,6 +46,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="uppercolumn">
                 <div class="uppercolumn-2">
                     <div class="profileupper-img-2">
@@ -50,16 +55,13 @@
                 </div>
             </div>
         </div>
-        <div class="profileupper-bubukteh">
-            <img src="Asset/bubuk teh.png" alt="">
-        </div>
     </section>
     <!-- Section profileupper "About US TeavoU" End-->
     
     <!-- Section profilecentre Start -->
     <section class="profilecentre" id="profilecentre">
         <div class="leftcolumn">
-        <div class="grid">
+            <div class="grid">
                 <div class="column">
                     <div class= "column-1">
                         <div class="image-1">
@@ -83,26 +85,29 @@
             </div>
         </div>
         <div class="rightcolumn">
-            <div class="profilecentrecard">
-                <h3>About <span>Us</span></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+            <div class="about-card">
+                <div class="about-us">
+                    <h3><span>About</span> Us</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+                </div>
             </div>
-            <div class="profilecentrecard">
-                <h3>Our <span>Vision</span></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
-            </div>
-            <div class="profilecentrecard">
-                <h3>Our <span>Mission</span></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
-            </div>
-            <div class="profilecentrecard">
+
+            <div class="value-card">
                 <h3>Value in <span>TeavoU</span></h3>
-                
-                <ol>
-                    <li><span class="numberganjil">1</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li><span class="numbergenap">2</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                    <li><span class="numberganjil">3</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                </ol>  
+                <div class="value-list" >
+                    <div>
+                        <h5>1</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                    </div>
+                    <div>
+                        <h5><span>2</span></h5>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                    </div>
+                    <div>
+                        <h5>3</h5>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                    </div>
+                </div> 
             </div>
         </div>
     </section>
