--- a/Product.html
+++ b/Product.html
@@ -384,28 +384,36 @@
     </section>  -->
   
     <!-- contnProduct -->
-    <section id="grid-content">
-        <div class="grid">
-            <div class="column">
-                <div class="column-1">
-                    <div class="image-1">
-                        <img src="Asset/product img 1.png" alt="">
-                    </div> 
-                    <div class="image-2">
-                        <img src="Asset/product img 2.png" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="column-2">
-                    <div class="image-3">
-                        <img src="Asset/product img 3.png" alt="">
-                    </div>   
-                    <div class="image-4">
-                         <img src="Asset/product img 4.png" alt="">
-                    </div>
-                </div>
-            </div>
+    <section id="grid">
+        <div class="item">
+            <img src="Asset/ContentTea1.png" class="ImgContent" alt="ContentTea1">
+        </div>
+        <div class="item">
+            <h4 class="Text-ContentTea">Dimming Stress</h4>
+            <p id="ParagraphContent">The delicate infusion of aromatic leaves not only captivates the senses but also offers a soothing balm to the soul. As the comforting warmth of the tea embraces you, a moment of respite unfolds—a brief sanctuary from the bustling world.</p>
+        </div>
+        <div class="item">
+            <h4 class="Text-ContentTea">Dimming Stress</h4>
+            <p id="ParagraphContent">The delicate infusion of aromatic leaves not only captivates the senses but also offers a soothing balm to the soul. As the comforting warmth of the tea embraces you, a moment of respite unfolds—a brief sanctuary from the bustling world.</p>
+        </div>
+        <div class="item">
+            <img src="Asset/ContentTea2.png" class="ImgContent" alt="ContentTea1">
+        </div>
+        <div class="item">
+            <img src="Asset/ContentTea3.png" class="ImgContent" alt="ContentTea1">
+        </div>
+        <div class="item">
+            <h4 class="Text-ContentTea">Dimming Stress</h4>
+            <p id="ParagraphContent">The delicate infusion of aromatic leaves not only captivates the senses but also offers a soothing balm to the soul. As the comforting warmth of the tea embraces you, a moment of respite unfolds—a brief sanctuary from the bustling world.</p>
+        </div>
+        <div class="item">
+            <h4 class="Text-ContentTea">Dimming Stress</h4>
+            <p id="ParagraphContent">The delicate infusion of aromatic leaves not only captivates the senses but also offers a soothing balm to the soul. As the comforting warmth of the tea embraces you, a moment of respite unfolds—a brief sanctuary from the bustling world.</p>
+        </div>
+        <div class="item">
+            <img src="Asset/ContentTea4.png" class="ImgContent" alt="ContentTea1">
+        </div>
+
         </div>
 
     </section>
