Edit about us page
- Add grid (profilecentre)
- Add vision and vision of company

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -58,59 +58,98 @@
     </section>
     <!-- Section profileupper "About US TeavoU" End-->
     
-    <!-- Section profilecentre Start -->
+    <!-- COBA COBA -->
     <section class="profilecentre" id="profilecentre">
-        <div class="leftcolumn">
-            <div class="grid">
-                <div class="column">
-                    <div class= "column-1">
-                        <div class="image-1">
-                            <img src="Asset/isi about.png" alt="">
+        <div class="grid-container">
+                <div class="grid-item item1">
+                    <div class="grid">
+                        <div class="column">
+                            <div class= "column-1">
+                                <div class="image-1">
+                                    <img src="Asset/isi about.png" alt="">
+                                </div> 
+                                <div class="image-2">
+                                    <img src="Asset/isi about 2.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="column-2">
+                                <div class="image-3">
+                                    <img src="Asset/isi about 3.png" alt="">
+                                </div>   
+                                <div class="image-4">
+                                    <img src="Asset/isi about 4.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item item2">
+                    <div class="about-card">
+                        <div class="about-us">
+                            <h3><span>About</span> Us</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item item3">
+                    <div class="value-card">
+                        <h3>Value in <span>TeavoU</span></h3>
+                        <div class="value-list" >
+                            <div>
+                                <h5>1</h1>
+                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                            </div>
+                            <div>
+                                <h5><span>2</span></h5>
+                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                            </div>
+                            <div>
+                                <h5>3</h5>
+                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                            </div>
                         </div> 
-                        <div class="image-2">
-                            <img src="Asset/isi about 2.png" alt="">
-                        </div>
                     </div>
-                </div>
-                <div class="column">
-                    <div class="column-2">
-                        <div class="image-3">
-                            <img src="Asset/isi about 3.png" alt="">
-                        </div>   
-                        <div class="image-4">
-                            <img src="Asset/isi about 4.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
+                </div>  
         </div>
-        <div class="rightcolumn">
-            <div class="about-card">
-                <div class="about-us">
-                    <h3><span>About</span> Us</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+        <div class="bottomcolumn">
+            <div class="grid-item item4">
+                <div class="visi-card">
+                    <h3>Our <span>Vision</span></h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
                 </div>
             </div>
-
-            <div class="value-card">
-                <h3>Value in <span>TeavoU</span></h3>
-                <div class="value-list" >
-                    <div>
-                        <h5>1</h1>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
-                    </div>
-                    <div>
-                        <h5><span>2</span></h5>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
-                    </div>
-                    <div>
-                        <h5>3</h5>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
-                    </div>
-                </div> 
+            <div class="grid-item item5">
+                <div class="misi-card">
+                    <h3><span>Our</span> Mission</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
+                </div>
             </div>
         </div>
     </section>
+       
+
+
+
+
+
+
+        <!-- <div class="bottomcolumn">
+            <div class="visi-card">
+                <div class="object">
+                    <h3>Our Vision</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
+                </div>
+            </div>
+            <div class="misi-card">
+                <div class="object">
+                    <h3>Our Mission</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
+                </div>
+            </div>
+        </div> -->
+
     <!-- Section profilecentre End -->
 
     <!-- Section TeavoUTeam Start -->
