Update margin (About Us)

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -99,15 +99,15 @@
                         <div class="value-list" >
                             <div>
                                 <h5>1</h1>
-                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae quaerat id quos? Pariatur ipsa nihil officiis dolore, placeat quis quos aut hic, aliquam possimus perferendis at quod mollitia reprehenderit quam!</P>
                             </div>
                             <div>
                                 <h5><span>2</span></h5>
-                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae quaerat id quos? Pariatur ipsa nihil officiis dolore, placeat quis quos aut hic, aliquam possimus perferendis at quod mollitia reprehenderit quam!</P>
                             </div>
                             <div>
                                 <h5>3</h5>
-                                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. A architecto nesciunt obcaecati maxime,</P>
+                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae quaerat id quos? Pariatur ipsa nihil officiis dolore, placeat quis quos aut hic, aliquam possimus perferendis at quod mollitia reprehenderit quam!</P>
                             </div>
                         </div> 
                     </div>
@@ -128,28 +128,6 @@
             </div>
         </div>
     </section>
-       
-
-
-
-
-
-
-        <!-- <div class="bottomcolumn">
-            <div class="visi-card">
-                <div class="object">
-                    <h3>Our Vision</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
-                </div>
-            </div>
-            <div class="misi-card">
-                <div class="object">
-                    <h3>Our Mission</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
-                </div>
-            </div>
-        </div> -->
-
     <!-- Section profilecentre End -->
 
     <!-- Section TeavoUTeam Start -->
