--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="Home/HomeStyle.css">
-    
+    <link rel="icon" href="Asset/Logo.png" type="image/x-icon">
     
 </head>
 <body>
@@ -75,6 +75,11 @@
                     <span class="Tea3">Tea</span></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Pariatur quam totam sed facilis ex nostrum.</p>
                 <div class="labe3-best">Best Seller</div>
+            </div>
+            <div class="dots-best">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
             </div>
           </div>
     </section>
