Add Gallery and Description
Change gallery image in About Us page and fill in description in Sweet tea menu (product), festival info (home), and value in teavou (about us)

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -88,8 +88,11 @@
                 <div class="grid-item item2">
                     <div class="about-card">
                         <div class="about-us">
-                            <h3><span>About</span> Us</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>    
+                            <h3><span>Our</span> Commitment</h3>
+                            <p>TeavoU is leading the company with the aim to ensure that future generation will be able to enjoy the same quality tea as we do today.
+                            <br>
+                            The goal is to help tea gardens flourish like vineyards, and for our customers to appreciate tea like fine wine.
+                            </p>    
                         </div>
                     </div>
                 </div>
@@ -99,15 +102,24 @@
                         <div class="value-list" >
                             <div>
                                 <h5>1</h1>
-                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae quaerat id quos? Pariatur ipsa nihil officiis dolore, placeat quis quos aut hic, aliquam possimus perferendis at quod mollitia reprehenderit quam!</P>
+                                <h6>qualitea
+                                <br>
+                                <p> we take pride in delivering the utmost best of tea flavor to your cup</p>
+                                </h6>
                             </div>
                             <div>
                                 <h5><span>2</span></h5>
-                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae quaerat id quos? Pariatur ipsa nihil officiis dolore, placeat quis quos aut hic, aliquam possimus perferendis at quod mollitia reprehenderit quam!</P>
+                                <h6> sustainabilitea
+                                <br>
+                                <p>we ensure our source are in the very best care possible, from every seed to sip  </p>
+                                </h6>
                             </div>
                             <div>
                                 <h5>3</h5>
-                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae quaerat id quos? Pariatur ipsa nihil officiis dolore, placeat quis quos aut hic, aliquam possimus perferendis at quod mollitia reprehenderit quam!</P>
+                                <h6>responsibilitea
+                                <br>
+                                <p> we appreciate every and each communitea  involved in the process</p>
+                                </h6>
                             </div>
                         </div> 
                     </div>
@@ -178,45 +190,45 @@
             <!-- SLIDE 1 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
+                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
+                    <img src="Asset/Gallery6.jpg" alt="Image 1">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
+                    <img src="Asset/Gallery4.jpg" alt="Image 1">
                 </div>
             </div>
 
             <!-- SLIDE 2 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
+                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
+                    <img src="Asset/Gallery7.jpg" alt="Image 1">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
+                    <img src="Asset/Gallery8.jpg" alt="Image 1">
                 </div>
             </div>
 
             <!-- SLIDE 3 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
+                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
                 </div>
                 
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
+                    <img src="Asset/Gallery5.png" alt="Image 1">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
+                    <img src="Asset/Gallery9.jpeg" alt="Image 1">
                 </div>
             </div>
         </div>
