--- a/index.html
+++ b/index.html
@@ -112,14 +112,15 @@
 <section class="festival">
     <img src="Asset/TeaVestival.png" alt="event">
     <div class="textFestival">
-    <h3>Tea Festival</h3>
-    <h5>Sunday 20 August</h5>
+    <h3>It's a Thirs-tea Thursday</h3>
+    <h5>14 December 2023</h5>
     <br>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa, ex repellendus! Eligendi debitis quis qui dolores, sit ipsa. Reprehenderit molestias repellat cum fugit atque veniam est recusandae quas eos magnam!</p>
+    <p>Happening NOW! Come join us and celebrate the most delightful tea festival of the year.
+    </p>
     <br>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae est, rerum optio esse tenetur consequatur alias magnam ut placeat rem mollitia. Neque necessitatibus blanditiis temporibus, non repellat cum magni omnis.</p>
+    <p>Take part in taking a stroll in the evergreen tea gardens, visit the historical tea heritage sites, and enjoy the various enriching flavors of tea.</p>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error sed, architecto quibusdam ab deleniti quisquam omnis aliquam accusamus beatae iste ducimus inventore commodi assumenda veritatis magnam. Illum repellendus odit consequuntur?</p>
+    <p>Book your session here</p>
     </div>
 </section>
 
