--- a/Product.html
+++ b/Product.html
@@ -177,7 +177,10 @@
             <img src="Asset/tea 1.png" alt="">
             <h5>Butterfly Pea Elixir</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">An organic tea from butterfly-pea flower combined with honey and fresh lemon juice. 
+                <br>
+                <br>
+                The earthy, sour-sweet taste is the ultimate mood-booster and help reduce symptoms of anxie-tea.</p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
@@ -187,7 +190,10 @@
             <img src="Asset/tea 2.png" alt="">
             <h5>Blue Thai Tea</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">The traditional thai tea combined with pearl of natural blue color from thai orchid flower.
+                <br>
+                <br>
+                Enjoy the authentic taste that give you calming effect and harmonize your emotions.</p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
@@ -201,7 +207,10 @@
             <img src="Asset/tea 3.png" alt="">
             <h5>Alga on Ocean</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">An exclusive upgrade from your usual matcha latte with natural blue  color pearls.
+                <br>
+                <br>
+                Enjoy the next level experience of having matcha latte that amplify your focus and immuni-tea!</p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
@@ -211,7 +220,10 @@
             <img src="Asset/matcha-bobs.png" alt="">
             <h5>Matcha Boba</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">Flavorful green tea with less caffeine, natural sugar content, and chewy boba pearls.
+                <br>
+                <br>
+                Specially tailored for those who need a boost of energy without having the anxie-tea side effect.</p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
@@ -221,7 +233,10 @@
             <img src="Asset/taiwan-milk-tea.png" alt="">
             <h5>Taiwan Milk Tea</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">A  unique blend of robust Taiwanese black tea, caramelized brown-sugar, plus boba, and extra bubble jely on top.
+                <br>
+                <br>
+                Perfect for your mood booster and extra happiness.  </p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
@@ -231,7 +246,10 @@
             <img src="Asset/rose-matcha.png" alt="">
             <h5>Rose Matcha</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">Features a homemade rose syrup that sweetens and adds a delicate floral fragrance to the green tea.
+                <br>
+                <br>
+                Have trouble sleeping? this is the ultimate choice to fight insomnia!</p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
@@ -241,7 +259,10 @@
             <img src="Asset/taro-boba.png" alt="">
             <h5>Taro Boba Tea</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">The perfect purple color combines with the sweet, nutty-vanilla taste of taro root.
+                <br>
+                <br>
+                Great for restoring that stamina and add excitement to your boring day!</p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
@@ -255,7 +276,10 @@
             <img src="Asset/butterfly-pea-boba.png" alt="">
             <h5>Butterfly Pea Boba</h5>
             <div class="text-wrapper">
-                <p class="truncate expanded">Lorem ipsum dolor sit amet consectetur, adipisicing....</p>
+                <p class="truncate expanded">The exotic variation of the classic  boba tea, made with Thai butterfly pea flower tea and fresh coconut milk.
+                <br>
+                <br>
+                Feeling Tired? Refresh the brain and bolster energy levels with this!</p>
             </div>
             <button class="read" >Read More</button>
                  <h5 id="price">$15</h5>
