--- a/AboutUs.html
+++ b/AboutUs.html
@@ -58,81 +58,78 @@
     </section>
     <!-- Section profileupper "About US TeavoU" End-->
     
-    <!-- COBA COBA -->
-    <section class="profilecentre" id="profilecentre">
-        <div class="grid-container">
-                <div class="grid-item item1">
-                    <div class="grid">
-                        <div class="column">
-                            <div class= "column-1">
-                                <div class="image-1">
-                                    <img src="Asset/isi about.png" alt="">
-                                </div> 
-                                <div class="image-2">
-                                    <img src="Asset/isi about 2.png" alt="">
-                                </div>
+    
+    <!-- Section profilecentre start -->
+    <section class="profilecentre">
+        <div class="flex-container">
+            <div class="flex-item-left">
+                <div class="grid">
+                    <div class="column">
+                        <div class= "column-1">
+                            <div class="image-1">
+                                <img src="Asset/isi about.png" alt="">
+                            </div> 
+                            <div class="image-2">
+                                <img src="Asset/isi about 2.png" alt="">
                             </div>
                         </div>
-                        <div class="column">
-                            <div class="column-2">
-                                <div class="image-3">
-                                    <img src="Asset/isi about 3.png" alt="">
-                                </div>   
-                                <div class="image-4">
-                                    <img src="Asset/isi about 4.png" alt="">
-                                </div>
+                    </div>
+                    <div class="column">
+                        <div class="column-2">
+                            <div class="image-3">
+                                <img src="Asset/isi about 3.png" alt="">
+                            </div>   
+                            <div class="image-4">
+                                <img src="Asset/isi about 4.png" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="grid-item item2">
-                    <div class="about-card">
-                        <div class="about-us">
-                            <h3><span>Our</span> Commitment</h3>
-                            <p>TeavoU is leading the company with the aim to ensure that future generation will be able to enjoy the same quality tea as we do today.
+            </div>
+            <div class="flex-item-right">
+                <div class="commitmentcard">
+                    <h3><span>Our</span> Commitment</h3>
+                    <p>TeavoU is leading the company with the aim to ensure that future generation will be able to enjoy the same quality tea as we do today.
+                    <br>
+                    The goal is to help tea gardens flourish like vineyards, and for our customers to appreciate tea like fine wine.
+                    </p>    
+                </div>
+                <div class="value-card">
+                    <h3>Value in <span>TeavoU</span></h3>
+                    <div class="value-list" >
+                        <div>
+                            <h5>1</h1>
+                            <h6>qualitea
                             <br>
-                            The goal is to help tea gardens flourish like vineyards, and for our customers to appreciate tea like fine wine.
-                            </p>    
+                            <p> we take pride in delivering the utmost best of tea flavor to your cup</p>
+                            </h6>
                         </div>
-                    </div>
+                        <div>
+                            <h5><span>2</span></h5>
+                            <h6> sustainabilitea
+                            <br>
+                            <p>we ensure our source are in the very best care possible, from every seed to sip</p>
+                            </h6>
+                        </div>
+                        <div>
+                            <h5>3</h5>
+                            <h6>responsibilitea
+                            <br>
+                            <p> we appreciate every and each communitea  involved in the process</p>
+                            </h6>
+                        </div>
+                    </div> 
                 </div>
-                <div class="grid-item item3">
-                    <div class="value-card">
-                        <h3>Value in <span>TeavoU</span></h3>
-                        <div class="value-list" >
-                            <div>
-                                <h5>1</h1>
-                                <h6>qualitea
-                                <br>
-                                <p> we take pride in delivering the utmost best of tea flavor to your cup</p>
-                                </h6>
-                            </div>
-                            <div>
-                                <h5><span>2</span></h5>
-                                <h6> sustainabilitea
-                                <br>
-                                <p>we ensure our source are in the very best care possible, from every seed to sip  </p>
-                                </h6>
-                            </div>
-                            <div>
-                                <h5>3</h5>
-                                <h6>responsibilitea
-                                <br>
-                                <p> we appreciate every and each communitea  involved in the process</p>
-                                </h6>
-                            </div>
-                        </div> 
-                    </div>
-                </div>  
+            </div>
         </div>
-        <div class="bottomcolumn">
-            <div class="grid-item item4">
+        <div class="bottomcentre">
+            <div class="bottomcentre-left">
                 <div class="visi-card">
                     <h3>Our <span>Vision</span></h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
                 </div>
             </div>
-            <div class="grid-item item5">
+            <div class="bottomcentre-right">
                 <div class="misi-card">
                     <h3><span>Our</span> Mission</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
