--- a/AboutUs.html
+++ b/AboutUs.html
@@ -42,8 +42,9 @@
     <section class="profileupper" id="profileupper">
         <div class="upperleftcolumn">
             <div class="profileupper-text">
-                <h1>About Us<span><br>TeavoU</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis. Integer non</p>
+                <h1>Welcome to<span> TeavoU</span></h1>
+                <p>The ultimate tea house based in Indonesia. For more than a decade serving the best tea experience for our tea lovers around the world. <br><br> Our specialty lies within the artistry of tea-making. Ensuring every process is taken with a good care, for your brew-tea-ful day!
+                </p>
             </div>
             <div class="profileupper-bubukteh">
                 <img src="Asset/bubuk teh.png" alt="">
@@ -101,34 +102,29 @@
             <div class="flex-item-right">
                 <div class="commitmentcard">
                     <h3><span>Our</span> Commitment</h3>
-                    <p>TeavoU is leading the company with the aim to ensure that future generation will be able to enjoy the same quality tea as we do today.
-                    <br>
-                    The goal is to help tea gardens flourish like vineyards, and for our customers to appreciate tea like fine wine.
+                    <p>TeavoU is leading the company with the aim to ensure that future generation will be able to enjoy the same quality tea as we do today. The goal is to help tea gardens flourish like vineyards, and for our customers to appreciate tea like fine wine.
                     </p>    
                 </div>
                 <div class="value-card">
                     <h3>Value in <span>TeavoU</span></h3>
                     <div class="value-list" >
                         <div>
-                            <h5>1</h1>
-                            <h6>qualitea
+                            <h5>1</h5>
+                            <h6>Quality</h6>
                             <br>
-                            <p> we take pride in delivering the utmost best of tea flavor to your cup</p>
-                            </h6>
+                            <p> we take pride in delivering the utmost best of tea flavor to your cup of tea</p>
                         </div>
                         <div>
                             <h5><span>2</span></h5>
-                            <h6> sustainabilitea
+                            <h6><span>Sustainability</span></h6>
                             <br>
-                            <p>we ensure our source are in the very best care possible, from every seed to sip</p>
-                            </h6>
+                            <p>we ensure our resources are in the very best care possible, for the people, for the planet.</p>
                         </div>
                         <div>
                             <h5>3</h5>
-                            <h6>responsibilitea
+                            <h6>Responsibility
                             <br>
-                            <p> we appreciate every and each communitea  involved in the process</p>
-                            </h6>
+                            <p> we appreciate every and each communitea involved in the process, from every seed to sip</p></h6>
                         </div>
                     </div> 
                 </div>
@@ -138,13 +134,13 @@
             <div class="bottomcentre-left">
                 <div class="visi-card">
                     <h3>Our <span>Vision</span></h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
+                    <p>TeavoU passion to discover delicious, healthy beverage options by delivering high quality teas specially tailored for each of our communitea lifestyle. We want to change the way people feel about tea, one cup at a time.</p>
                 </div>
             </div>
             <div class="bottomcentre-right">
                 <div class="misi-card">
                     <h3><span>Our</span> Mission</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quam temporibus doloremque, maiores itaque odit, hic odio corrupti deleniti ab assumenda nesciunt illo animi deserunt? Optio dignissimos illum veritatis odio?</p>
+                    <p>TeavoU is determined to contribute to the health and joy of the people around us by providing innovative and organic tea options. We are committed to do this in a sustainable way for the benefit of our people and the planet</p>
                 </div>
             </div>
         </div>
@@ -282,14 +278,14 @@
 
         <div class="mail">
             <img src="Asset/mail.svg" alt="">
-            <p><a href="#">support@gmail.com</a></p>
+            <p><a href="#">support@teavou.com</a></p>
         </div>
     </div>
 
     <div class="footer-right">
         <p class="footer-about">
             <span>About</span>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis.
+            Our specialty lies within the artistry of tea-making. Ensuring every process is taken with a good care, for your brew-tea-ful day!
         </p>
     </div>
 
