--- a/index.html
+++ b/index.html
@@ -113,14 +113,15 @@
     <img src="Asset/TeaVestival.png" alt="event">
     <div class="textFestival">
     <h3>It's a Thirs-tea Thursday</h3>
-    <h5>14 December 2023</h5>
+    <h5>Bandung, 14 December 2023</h5>
     <br>
     <p>Happening NOW! Come join us and celebrate the most delightful tea festival of the year.
     </p>
     <br>
     <p>Take part in taking a stroll in the evergreen tea gardens, visit the historical tea heritage sites, and enjoy the various enriching flavors of tea.</p>
-    <br>
-    <p>Book your session here</p>
+    </div>
+    <div class="FestivalBooking">
+        <a href="https://forms.gle/BGk8Hi9MmY6c8tzq5"><p>Book your session here</p></a>
     </div>
 </section>
 
@@ -182,7 +183,7 @@
 
 <section class="spill" id="spill">
     <div class="spill-text">
-        <h2>Products spill Seller</h2>
+        <h2>They spill the tea</h2>
     </div>
     <div class="showSlide_spill">
         <div class="slide_spill">
@@ -430,14 +431,14 @@
 
         <div class="mail">
             <img src="Asset/mail.svg" alt="">
-            <p><a href="#">support@gmail.com</a></p>
+            <p><a href="#">support@teavou.com</a></p>
         </div>
     </div>
 
     <div class="footer-right">
         <p class="footer-about">
             <span>About</span>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eget leo id urna laoreet lacinia. Suspendisse non elit at turpis feugiat cursus. Sed in semper tortor. Maecenas vestibulum non justo id tempus. Sed rhoncus nunc ac facilisis.
+            Our specialty lies within the artistry of tea-making. Ensuring every process is taken with a good care, for your brew-tea-ful day!
         </p>
     </div>
 
