--- a/AboutUs.html
+++ b/AboutUs.html
@@ -110,21 +110,20 @@
                     <div class="value-list" >
                         <div>
                             <h5>1</h5>
-                            <h6>Quality</h6>
-                            <br>
-                            <p> we take pride in delivering the utmost best of tea flavor to your cup of tea</p>
+                            <h6>Qualitea</h6>
+                            <p> We take pride in delivering the utmost best of tea flavor to your cup of tea</p>
                         </div>
                         <div>
                             <h5><span>2</span></h5>
-                            <h6><span>Sustainability</span></h6>
+                            <h6><span>Sustainabilitea</span></h6>
                             <br>
-                            <p>we ensure our resources are in the very best care possible, for the people, for the planet.</p>
+                            <p>We ensure our resources are in the very best care possible, for the people, for the planet.</p>
                         </div>
                         <div>
                             <h5>3</h5>
-                            <h6>Responsibility
+                            <h6>Responsibilitea</h6>
                             <br>
-                            <p> we appreciate every and each communitea involved in the process, from every seed to sip</p></h6>
+                            <p> We appreciate every and each communitea involved in the process, from every seed to sip</p>
                         </div>
                     </div> 
                 </div>
