--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
     <div id="tea1" class="tabcontent">
         <img src="Asset/QuizL1.png" alt="">
         <div class="box">
-            <h4>SweeTea</h4>
+            <h4>OriginTea</h4>
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi velit error aut. Dolor quis blanditiis obcaecati amet. Nobis ipsa obcaecati non, temporibus fugit eos sequi, impedit repellat magnam ex quod.</p>
-            <button class="playQuiz" onclick="startQuiz()">Play</button>
+            <p>It's been oolong time. Let's find out how much you know about tea! Play the quiz below!</p>
+            <a href="quiz.html"><button class="PlayQuiz">Play</button>
         </div>
     </div>
 
     <div id="tea2" class="tabcontent">
         <img src="Asset/QuizL2.png" alt="">
         <div class="box">
-        <h4>Blue Thai Tea</h4>
+        <h4>Tisane</h4>
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi velit error aut. Dolor quis blanditiis obcaecati amet. Nobis ipsa obcaecati non, temporibus fugit eos sequi, impedit repellat magnam ex quod.</p>
+        <p>Are you captivated by the infusion of aromatic tea leaves that soothes your soul? Find out in the quiz below!</p>
         <button class="playQuiz" onclick="startQuiz()">Play</button>
     </div>
     </div>
@@ -161,9 +161,9 @@
     <div id="tea3" class="tabcontent">
         <img src="Asset/QuizL3.png" alt="">
         <div class="box">
-        <h4>Alga on Ocean</h4>
+        <h4>SweeTea</h4>
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi velit error aut. Dolor quis blanditiis obcaecati amet. Nobis ipsa obcaecati non, temporibus fugit eos sequi, impedit repellat magnam ex quod.</p>
+        <p>Let's find out how pearl-fect you know about tea! Play the quiz below!</p>
         <button class="playQuiz" onclick="startQuiz()">Play</button>
     </div>
 
