--- a/quiz.html
+++ b/quiz.html
@@ -7,8 +7,24 @@
    <title>JS Quiz Format 1</title>
    <link rel="stylesheet" href="quiz/quiz.css">
 </head>
-<body> 
-   <script src="quiz/quiz.js"></script>
+<body>
+    <!-- NavBar Start -->
+    <header>
+        <!-- insert logo -->
+        <a href="#" class="logo">
+            <img src="Asset/Logo.png" alt="logo">
+        </a>
+  
+        <!-- navbar links -->
+        <ul class="navbar">
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="AboutUs.html">About Us</a></li>
+            <li><a href="Product.html">Product</a></li>
+        </ul>
+       </header>
+        <!-- NavBar END -->
+
+ <!-- Questions Container-->     
    <div class="container">
     <div class="score">
         <span id="user-score">0</span>
@@ -28,6 +44,7 @@
         <button class="button btn-next" id="next">Next</button>
         <button class="button btn-submit" id="submit">Submit</button>
     </div>
+       <script src="quiz/quiz.js"></script>
 </div>
 </body>
 </html>
