--- a/history.html
+++ b/history.html
@@ -15,8 +15,18 @@
           <img src="Asset/Logo.png" alt="logo">
       </a>
 
-      <!-- menu icon -->
-      <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i>
+      <!-- coba navbar dropdown -->
+      <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">
+        <img src="Asset/menu.svg" alt="menubtn">
+        </button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="index.html">Home</a>
+          <a href="AboutUs.html">AboutUs</a>
+          <a href="Product.html">Product</a>
+        </div>
+      </div>
+
 
       <!-- navbar links -->
       <ul class="navbar">
